@@ -1,3 +1,7 @@
+2012-08-18  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* music/interval_tree.hh: Optimized memory usage.
+
 2012-08-17  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* music/index_map.hh, music/interval.hh: Removed clone().
